# anonymize

./: .gitignore  .replit  Pipfile  anonymize_data.py  pyproject.toml  replit.md  setup.py
anonymize_data/: __init__.py  __main__.py  core.py  openmed_tools.py
anonymize_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
presidio_service/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
presidio_service/templates/: index.html
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_openmed_tools.py
