[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faker>=30.0.0",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "instructor>=1.15.1",
    "openai>=2.33.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic>=2.13.3",
    "setuptools>=82.0.1",
]
